[package]
name = "matszpk-sokoban"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
readme = "README.md"
version = "0.1.1"
edition = "2018"
description = "Sokoban game"
repository = "https://github.com/matszpk/rust-sokoban"
categories = ["games"]
keywords = ["game", "sokoban"]
default-run = "sokoban"

[[bin]]
name = "sokoban"
path = "src/main.rs"

[lib]
name = "sokobanlib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
int-enum = "0.4.0"
quick-xml = "^0.22"
termion = "^1.5"
